# bugsnag-android-gradle-plugin

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE.txt  Makefile  README.md  UPGRADING.md  build.gradle  detekt-baseline.xml  docker-compose.yml  gradle.properties  settings.gradle  settings.gradle.kts
.buildkite/: pipeline.yml
.github/: SUPPORT.md  support.md
appflavors/: build.gradle
appflavorsplits/: build.gradle
appsplits/: build.gradle
appvanilla/: build.gradle
dockerfiles/: Dockerfile.android-ci  Dockerfile.license-audit
features/: abi_apk_splits.feature  agp7_emits_error.feature  agp_compatibility_check.feature  apk_splits.feature  apk_splits_same_version.feature  app_abi_splits.feature  app_bundle.feature  app_default.feature  app_flavor_splits.feature  app_flavors.feature  app_splits.feature  auto_update_build_uuid.feature  default_app.feature  default_app_agp340.feature  default_lib.feature  density_abi_splits.feature  density_splits.feature  disabled_bugsnag.feature  disabled_build_type.feature  disabled_product_flavor.feature  extension_properties.feature  fail_on_upload_error.feature  flavor_apk_splits.feature  flavors.feature  lib_default.feature  manifest_overrides.feature  manifest_version_code.feature  manual_build_uuid.feature  manual_upload.feature  ndk_app.feature  ndk_app_agp400.feature  ndk_app_legacy.feature  proxy.feature  react_native.feature  unity.feature  validation.feature  version_code_override.feature
features/fixtures/mylib/app/: CMakeLists.txt  build.gradle
features/fixtures/mylib/app/src/main/: AndroidManifest.xml
features/fixtures/mylib/app/src/main/cpp/: native-lib.cpp
features/fixtures/mylib/app/src/main/java/com/example/bugsnag/mylib/: Foo.java
(+619 files in other folders)
